--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">Tech Time Go Club</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
@@ -26,20 +26,12 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
-
+        <p class="view"><a href="classes.html">Classes</a></p>
         <p class="view"><a href="contact.html">Contact</a></p>
-        <p>
-          Resources:
-          <ul>
-            <li>
-              <a href="learn.html">Learn</a>
-            </li>
-            <li>
-              <a href="play.html">Play</a>
-            </li>
-          </ul>
-        </p>
-
+        <hr>
+        <p> Resources: </p>
+        <p class="view"><a href="learn.html">Learn</a></p>
+        <p class="view"><a href="play.html">Play</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
@@ -55,6 +47,7 @@
 
       </section>
       <footer>
+        <p><small>35469 Dumbarton Court, Newark, CA 94560</small></p>
         <!--p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p-->
       </footer>
     </div>
