--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
         {% if site.github.is_project_page %}
         <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
         {% endif %}
+        <p class="view"><a href="/">About Us</a></p>
         <p class="view"><a href="classes.html">Classes</a></p>
         <p class="view"><a href="contact.html">Contact</a></p>
         <hr>
