--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
+        <h1><img src="images/logo.png"></img></h1>
         <h1><a href="{{ "/" | absolute_url }}">Tech Time Go Club</a></h1>
-
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
