--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Weiqi,Baduk,围棋,바둑,囲碁,Bay Area,湾区,课程,学习">
+    <meta name="keywords" content="Go School,Go Club,Weiqi,Baduk,围棋,바둑,囲碁,Bay Area,湾区,课程,学习">
     <link rel="icon" type="image/png" href="images/favicon.png">
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
