move rating system out of learn page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
         <p> Resources: </p>
         <p class="view"><a href="learn.html">Learn</a></p>
         <p class="view"><a href="play.html">Play</a></p>
+        <p class="view"><a href="rating.html">AGA Rating</a></p>
 
         {% if site.show_downloads %}
         <ul class="downloads">
