--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1><img src="images/logo.png"></img></h1>
-        <h1><a href="{{ "/" | absolute_url }}">Tech Time Go Club</a></h1>
+        <h1><a href="{{ "/" | absolute_url }}">Tech Time Go School</a></h1>
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
