--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,10 +45,9 @@
       {{ content }}
 
       </section>
-      <footer>
+      <!--footer>
         <p><small>35467 Dumbarton Court, Newark, CA 94560</small></p>
-        <!--p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p-->
-      </footer>
+      </footer-->
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
   </body>
